tests/baselines/reference/decoratorOnArrowFunction.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts(3,9): error TS1109: Expression expected.
tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts(3,16): error TS1146: Declaration expected.
tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts(3,17): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts (3 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec () => {
            ~
!!! error TS1109: Expression expected.
                   
!!! error TS1146: Declaration expected.
                    ~~
!!! error TS1128: Declaration or statement expected.
    }